--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p class="model__price">$89.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
-            <div class="model__cirle"></div>
+            <div class="model__cirle model__cirle_big"></div>
             <div class="model__cirle model__cirle_red"></div>
             <div class="model__cirle model__cirle_yellow"></div>
           </div>
@@ -83,7 +83,7 @@
           <p class="model__price">$74.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
-            <div class="model__cirle model__cirle_beige"></div>
+            <div class="model__cirle model__cirle_beige model__cirle_big"></div>
             <div class="model__cirle model__cirle_red"></div>
             <div class="model__cirle model__cirle_yellow"></div>
           </div>
@@ -96,7 +96,7 @@
           <p class="model__price">$69.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
-            <div class="model__cirle model__cirle_brown"></div>
+            <div class="model__cirle model__cirle_brown model__cirle_big"></div>
             <div class="model__cirle model__cirle_red"></div>
             <div class="model__cirle model__cirle_yellow"></div>
           </div>
@@ -109,7 +109,7 @@
           <p class="model__price">$69.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
-            <div class="model__cirle model__cirle_blue"></div>
+            <div class="model__cirle model__cirle_blue model__cirle_big"></div>
             <div class="model__cirle model__cirle_red"></div>
             <div class="model__cirle model__cirle_yellow"></div>
           </div>
@@ -135,112 +135,112 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="title">Recent stories</div>
-      <div class="story">
+    <div class="title" id="title-black">Recent stories</div>
+    <div class="story">
+      <div class="story-box">
+        <p class="story-box__title">Presents Justin Anagoa</p>
+        <p class="story-box__subtitle">Anagoa’s been a part of the skater’s family ever since his early teenage years.
+          He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa
+          lives his day-to-day, to see what makes Anagoa tick.</p>
+          <div class="story-box__footer">
+            <div class="story-box__more">Learn more
+              <div class="arrow-black">
+                <div></div>
+              </div>
+            </div>
+            <p class="story-box__date">11.08.2018</p>
+          </div>
+        </div>
         <div class="story-box">
-          <p class="story-box__title">Presents Justin Anagoa</p>
-          <p class="story-box__subtitle">Anagoa’s been a part of the skater’s family ever since his early teenage years.
-            He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa
-            lives his day-to-day, to see what makes Anagoa tick.</p>
+          <p class="story-box__title">First Frontside flip</p>
+          <p class="story-box__subtitle">Yoon recently discusses his first time shooting a signature Andrew Reynolds
+            frontside flip on The Berrics. Click the image below to see the full gallery and read up on what
+            happened that day.</br>Photo:Yoon Sul</p>
             <div class="story-box__footer">
               <div class="story-box__more">Learn more
                 <div class="arrow-black">
                   <div></div>
                 </div>
               </div>
-              <p class="story-box__date">11.08.2018</p>
+              <p class="story-box__date">17.08.2018</p>
             </div>
           </div>
           <div class="story-box">
-            <p class="story-box__title">First Frontside flip</p>
-            <p class="story-box__subtitle">Yoon recently discusses his first time shooting a signature Andrew Reynolds
-              frontside flip on The Berrics. Click the image below to see the full gallery and read up on what
-              happened that day.</br>Photo:Yoon Sul</p>
+            <p class="story-box__title">Kevin Baekkel is Pro</p>
+            <p class="story-box__subtitle">Creature proudly announced today that they’re officially a
+              dding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years
+              Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
               <div class="story-box__footer">
                 <div class="story-box__more">Learn more
                   <div class="arrow-black">
                     <div></div>
                   </div>
                 </div>
-                <p class="story-box__date">17.08.2018</p>
+                <p class="story-box__date">29.07.2018</p>
               </div>
             </div>
-            <div class="story-box">
-              <p class="story-box__title">Kevin Baekkel is Pro</p>
-              <p class="story-box__subtitle">Creature proudly announced today that they’re officially a
-                dding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years
-                Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
-                <div class="story-box__footer">
-                  <div class="story-box__more">Learn more
-                    <div class="arrow-black">
-                      <div></div>
-                    </div>
+          </div>
+          <div class="gallery">
+            <div class="gallery__tag">#AXIONfootwear</div>
+            <div class="gallery__fotos">
+              <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
+              <img src="images/bw-2.jpg" class="gallery__foto" alt="Gallery foto">
+              <img src="images/bw-3.jpg" class="gallery__foto" alt="Gallery foto">
+              <img src="images/bw-4.jpg" class="gallery__foto" alt="Gallery foto">
+              <img src="images/bw-5.jpg" class="gallery__foto" alt="Gallery foto">
+              <img src="images/bw-6.jpg" class="gallery__foto" alt="Gallery foto">
+              <img src="images/bw-7.jpg" class="gallery__foto" alt="Gallery foto">
+              <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
+            </div>
+          </div>
+
+          <footer>
+            <div class="footer">
+              <div class="footer__columns">
+                <div class="footer__column">
+                  <p class="footer__title">MY ACCOUNT</p>
+                  <p class="footer__subtitle">Login</p>
+                  <p  class="footer__subtitle">Wish List</p>
+                  <p  class="footer__subtitle">Order History</p>
+                  <p  class="footer__subtitle">Track order</p>
+                  <p  class="footer__subtitle">Gift cards</p>
+                </div>
+                <div class="footer__column">
+                  <p class="footer__title">CUSTOMER SERVICE</p>
+                  <p  class="footer__subtitle">Contact us</br></p>
+                  <p  class="footer__subtitle">Help/FAQ</br></p>
+                  <p  class="footer__subtitle">Shipping</br></p>
+                  <p  class="footer__subtitle">Returns</br></p>
+                  <p  class="footer__subtitle">Size guide</br></p>
+                  <p  class="footer__subtitle">Holiday shopping</p>
+                </div>
+                <div class="footer__column">
+                  <p class="footer__title">MISCELLANEOUS</p>
+                  <p  class="footer__subtitle">About Us</br></p>
+                  <p  class="footer__subtitle">Careers</br></p>
+                  <p  class="footer__subtitle">Privacy Policy</br></p>
+                  <p  class="footer__subtitle">Terms & Conditions</br></p>
+                  <p  class="footer__subtitle">Ethical Policy</br></p>
+                  <p  class="footer__subtitle">Homepage US/UK</p>
+                </div>
+                <div class="footer__column">
+                  <p class="footer__title">NEWSLETTER SIGN UP</p>
+                  <p class="footer__offer">Get 10% Off Your Next Order!</p>
+                  <button class="footer__button">SIGN UP</button>
+                  <div class="footer__socialnets">
+                    <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
+                    <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
+                    <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
+                    <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
                   </div>
-                  <p class="story-box__date">29.07.2018</p>
                 </div>
               </div>
+              <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
             </div>
+          </footer>
 
-            <div class="gallery">
-              <div class="gallery__tag">#AXIONfootwear</div>
-              <div class="gallery__fotos">
-                <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
-                <img src="images/bw-2.jpg" class="gallery__foto" alt="Gallery foto">
-                <img src="images/bw-3.jpg" class="gallery__foto" alt="Gallery foto">
-                <img src="images/bw-4.jpg" class="gallery__foto" alt="Gallery foto">
-                <img src="images/bw-5.jpg" class="gallery__foto" alt="Gallery foto">
-                <img src="images/bw-6.jpg" class="gallery__foto" alt="Gallery foto">
-                <img src="images/bw-7.jpg" class="gallery__foto" alt="Gallery foto">
-                <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
-              </div>
-            </div>
+        </body>
 
-            <footer>
-              <div class="footer">
-                <div class="footer__columns">
-                  <div class="footer__column">
-                    <p class="footer__title">MY ACCOUNT</p>
-                    <p class="footer__subtitle">Login</p>
-                    <p  class="footer__subtitle">Wish List</p>
-                    <p  class="footer__subtitle">Order History</p>
-                    <p  class="footer__subtitle">Track order</p>
-                    <p  class="footer__subtitle">Gift cards</p>
-                  </div>
-                  <div class="footer__column">
-                    <p class="footer__title">CUSTOMER SERVICE</p>
-                    <p  class="footer__subtitle">Contact us</br></p>
-                    <p  class="footer__subtitle">Help/FAQ</br></p>
-                    <p  class="footer__subtitle">Shipping</br></p>
-                    <p  class="footer__subtitle">Returns</br></p>
-                    <p  class="footer__subtitle">Size guide</br></p>
-                    <p  class="footer__subtitle">Holiday shopping</p>
-                  </div>
-                  <div class="footer__column">
-                    <p class="footer__title">MISCELLANEOUS</p>
-                    <p  class="footer__subtitle">About Us</br></p>
-                    <p  class="footer__subtitle">Careers</br></p>
-                    <p  class="footer__subtitle">Privacy Policy</br></p>
-                    <p  class="footer__subtitle">Terms & Conditions</br></p>
-                    <p  class="footer__subtitle">Ethical Policy</br></p>
-                    <p  class="footer__subtitle">Homepage US/UK</p>
-                  </div>
-                  <div class="footer__column">
-                    <p class="footer__title">NEWSLETTER SIGN UP</p>
-                    <p class="footer__offer">Get 10% Off Your Next Order!</p>
-                    <button class="footer__button">SIGN UP</button>
-                    <div class="footer__socialnets">
-                      <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
-                      <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
-                      <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
-                      <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
-                    </div>
-                  </div>
-                </div>
-                <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
-              </div>
-            </footer>
-
-          </body>
-
-          </html>
+        </html>
