--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
   <div class="header">
-    <div class="logo-mobile"> </div>
+    <a class="logo-mobile" href="#"></a>
     <input id="menu__toggle" type="checkbox">
     <label class="menu__btn" for="menu__toggle">
       <span></span>
     </label>
     <div class="menu-left">
-      <div class="logo-main"> </div>
+      <a class="logo-main" href="#"> </a>
       <nav class="menu">
         <a class="menu__item" href="#">SHOP</a>
         <a class="menu__item" href="#">NEWS</a>
@@ -37,7 +37,7 @@
         <span class="menu__cart">1</span>
       </nav>
       <div class="menu__language">
-        <button class="language"><img src="images/flag-usa.svg" alt="Flag USA"></button>
+        <a class="language" href="#"><img src="images/flag-usa.svg" alt="Flag USA"></a>
         <div class="language-type">
           <a href="#"><img src="images/flag-rus.png" alt="Flag Russia" width="21px" height="15px" border="1px"></a>
           <a href="#"><img src="images/flag-spain.jpg" alt="Flag Spain" width="20px" height="15px" border="1px"></a>
@@ -51,11 +51,11 @@
   <div class="top">
     <div class="top__text">
       <p class="top__title">Legendary</br>footwear</br>reborn.</p>
-      <div class="top__subtitle">Shop now
+      <a class="top__subtitle" href="#">Shop now
         <div class="arrow">
           <div></div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
 
@@ -64,8 +64,9 @@
     <div class="title">Featured product</div>
     <div class="catalog__models">
       <div class="model">
+        <a href="#"></a>
         <p class="model__title">Atlas Black/Rasta Axion</p>
-        <div class="model__price-color">
+        <div class="model__paramerts">
           <p class="model__price">$89.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
@@ -75,10 +76,11 @@
           </div>
         </div>
       </div>
-      <div class="model__line"></div>
+      <div class="line"></div>
       <div class="model">
+        <a href="#"></a>
         <p class="model__title">Camel/Chili Pepper Axion</p>
-        <div class="model__price-color">
+        <div class="model__paramerts">
           <p class="model__price">$74.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
@@ -88,10 +90,11 @@
           </div>
         </div>
       </div>
-      <div class="model__line"></div>
+      <div class="line"></div>
       <div class="model">
+        <a href="#"></a>
         <p class="model__title">Mandel Smoke/Rust Axion</p>
-        <div class="model__price-color">
+        <div class="model__paramerts">
           <p class="model__price">$69.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
@@ -101,10 +104,11 @@
           </div>
         </div>
       </div>
-      <div class="model__line"></div>
+      <div class="line"></div>
       <div class="model">
+        <a href="#"></a>
         <p class="model__title">Cloud/Electric Blue Axion</p>
-        <div class="model__price-color">
+        <div class="model__paramerts">
           <p class="model__price">$69.00</p>
           <div class="model__color">
             <div class="model__cirle model__cirle_grey"></div>
@@ -119,7 +123,7 @@
 
   <div class="video">
     <div class="video__foto-container">
-      <div class="video__foto"><img src="images/video.jpg"  alt="Video preview" ></div>
+      <a class="video__foto" href="#"><img src="images/video.jpg"  alt="Video preview" ></a>
       <button class="video__play"><div class="triangle"></button>
       </div>
       <div class="video__text">
@@ -127,11 +131,11 @@
         <p class="video__subtitle">We are a brand with a history and are relaunching for 2019.
           We’ve been a part of the skater’s family ever since it’s early teenage years.
           And now we presentate a new footwear collection.</p>
-          <div class="video__more">Learn more
+          <a class="video__more">Learn more
             <div class="arrow">
               <div></div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -144,11 +148,11 @@
           He’s been known to go big on and off the board, but it’s been rare we get a glimpse into how Anagoa
           lives his day-to-day, to see what makes Anagoa tick.</p>
           <div class="story-box__footer">
-            <div class="story-box__more">Learn more
+            <a class="story-box__more">Learn more
               <div class="arrow-black">
                 <div></div>
               </div>
-            </div>
+            </a>
             <p class="story-box__date">11.08.2018</p>
           </div>
         </div>
@@ -158,11 +162,11 @@
             frontside flip on The Berrics. Click the image below to see the full gallery and read up on what
             happened that day.</br>Photo:Yoon Sul</p>
             <div class="story-box__footer">
-              <div class="story-box__more">Learn more
+              <a class="story-box__more" href="#">Learn more
                 <div class="arrow-black">
                   <div></div>
                 </div>
-              </div>
+              </a>
               <p class="story-box__date">17.08.2018</p>
             </div>
           </div>
@@ -172,11 +176,11 @@
               dding Kevin Baekkel to their pro roster. After paying his dues for years, killing it on last years
               Thrasher King of the Road, and constantly lighting every spot he hits on fire.</p>
               <div class="story-box__footer">
-                <div class="story-box__more">Learn more
+                <a class="story-box__more">Learn more
                   <div class="arrow-black">
                     <div></div>
                   </div>
-                </div>
+                </a>
                 <p class="story-box__date">29.07.2018</p>
               </div>
             </div>
@@ -198,50 +202,48 @@
             </div>
           </div>
 
-          <footer>
-            <div class="footer">
-              <div class="footer__columns">
-                <div class="footer__column">
-                  <p class="footer__title">MY ACCOUNT</p>
-                  <p class="footer__subtitle">Login</p>
-                  <p  class="footer__subtitle">Wish List</p>
-                  <p  class="footer__subtitle">Order History</p>
-                  <p  class="footer__subtitle">Track order</p>
-                  <p  class="footer__subtitle">Gift cards</p>
-                </div>
-                <div class="footer__column">
-                  <p class="footer__title">CUSTOMER SERVICE</p>
-                  <p  class="footer__subtitle">Contact us</br></p>
-                  <p  class="footer__subtitle">Help/FAQ</br></p>
-                  <p  class="footer__subtitle">Shipping</br></p>
-                  <p  class="footer__subtitle">Returns</br></p>
-                  <p  class="footer__subtitle">Size guide</br></p>
-                  <p  class="footer__subtitle">Holiday shopping</p>
-                </div>
-                <div class="footer__column">
-                  <p class="footer__title">MISCELLANEOUS</p>
-                  <p  class="footer__subtitle">About Us</br></p>
-                  <p  class="footer__subtitle">Careers</br></p>
-                  <p  class="footer__subtitle">Privacy Policy</br></p>
-                  <p  class="footer__subtitle">Terms & Conditions</br></p>
-                  <p  class="footer__subtitle">Ethical Policy</br></p>
-                  <p  class="footer__subtitle">Homepage US/UK</p>
-                </div>
-                <div class="footer__column">
-                  <p class="footer__title">NEWSLETTER SIGN UP</p>
-                  <p class="footer__offer">Get 10% Off Your Next Order!</p>
-                  <button class="footer__button">SIGN UP</button>
-                  <div class="footer__socialnets">
-                    <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
-                    <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
-                    <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
-                    <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
-                  </div>
+          <div class="footer">
+            <div class="footer__columns">
+              <div class="footer__column">
+                <a class="footer__title" href="#">MY ACCOUNT</a>
+                <a class="footer__link">Login</a>
+                <a class="footer__link">Wish List</a>
+                <a class="footer__link">Order History</a>
+                <a class="footer__link">Track order</a>
+                <a class="footer__link">Gift cards</a>
+              </div>
+              <div class="footer__column">
+                <a class="footer__title">CUSTOMER SERVICE</a>
+                <a class="footer__link">Contact us</br></a>
+                <a class="footer__link">Help/FAQ</br></a>
+                <a class="footer__link">Shipping</br></a>
+                <a class="footer__link">Returns</br></a>
+                <a class="footer__link">Size guide</br></a>
+                <a class="footer__link">Holiday shopping</a>
+              </div>
+              <div class="footer__column">
+                <a class="footer__title">MISCELLANEOUS</a>
+                <a class="footer__link">About Us</br></a>
+                <a class="footer__link">Careers</br></a>
+                <a class="footer__link">Privacy Policy</br></a>
+                <a class="footer__link">Terms & Conditions</br></a>
+                <a class="footer__link">Ethical Policy</br></a>
+                <a class="footer__link">Homepage US/UK</a>
+              </div>
+              <div class="footer__column">
+                <a class="footer__title">NEWSLETTER SIGN UP</a>
+                <a class="footer__offer">Get 10% Off Your Next Order!</a>
+                <button class="footer__button">SIGN UP</button>
+                <div class="footer__socialnets">
+                  <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
+                  <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
+                  <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
+                  <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
                 </div>
               </div>
-              <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
             </div>
-          </footer>
+            <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
+          </div>
 
         </body>
 
